--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,6 @@ readme = "docs/README.md"
 python = "3.12.0"
 django = "4.2.6"
 gunicorn = "21.2.0"
-django-guardian = "2.4.0"
 pyjwt = "2.8.0"
 psycopg2-binary = "2.9.9"
 fontawesomefree = "6.4.2"
@@ -18,6 +17,9 @@ django-google-fonts = "0.0.3"
 django-tailwind = {extras = ["reload"], version = "3.6.0"}
 crispy-tailwind = "0.5.0"
 django-crispy-forms = "2.1"
+daphne = "^4.0.0"
+channels = "^4.0.0"
+channels-redis = "^4.1.0"
 
 [build-system]
 requires = ["poetry-core"]
