fix: remove verbose level of asgi app
Signed-off-by: Glenn <glenn@not-tech.support>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
 
   asgi:
     build: .
-    command: daphne core.asgi:application -b 0.0.0.0 -p 80 -v 3
+    command: daphne core.asgi:application -b 0.0.0.0 -p 80
     restart: unless-stopped
     env_file:
       - ./.env
