fix: force redis version
Signed-off-by: Glenn <glenn@not-tech.support>

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -2,6 +2,7 @@
   "extends": [
     "github>promise/renovate-config",
     "github>promise/renovate-config:force-node-version(18)",
-    "github>promise/renovate-config:force-postgres-version(16)"
+    "github>promise/renovate-config:force-postgres-version(16)",
+    "github>promise/renovate-config:force-redis-version(5)"
   ]
 }
